--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header">
             <h1>
-                Weather Cities Project
+                Weather App
             </h1>
         </div>
     </header>
